--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Trigger the modal with a button -->
-</br>
+<br>
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="reset_form();">New
   Database Build Request
 </button>
@@ -79,7 +79,7 @@
             <br>
             <div title="The set of IBDF files to be included in the DB.  Do not include the metadata IBDF file from ISAAC, it is always included."><!-- this is important!! -->
               <div style="display:inline-block">
-                <span style="float: left" id="ibdf_selection_label"><h4>IBDF Files</h4></span></div>
+                <span style="float: left" id="lbl_ibdf_files"><h4>IBDF Files</h4></span></div>
               <input type="hidden" name="ibdf_selections" id="ibdf_selections">
               <%= select_tag 'ibdf_files',
                              options_from_collection_for_select(@idbf_files, :option_key, :option_value),
@@ -89,7 +89,7 @@
                                        multi: true
                              },
                              required: true,
-                             'aria-labelledby': 'ibdf_selection_label'
+                             'aria-labelledby': 'lbl_ibdf_files'
               %>
             </div>
             <br>
@@ -132,9 +132,21 @@
     }
 
     function submitPackage() {
+        // disable the submit button to prevent double submits and if this function returns false then
+        // this is a subsequent submission so return false
+        if (!enable_submit_btn(false)) {
+            return false;
+        }
+
         $('#ibdf_selections').val($('#ibdf_files').val());
-        var $btnSubmit = $("#btn_submit");
-        $btnSubmit.attr('onclick', 'return false;').html('<span><i class="fa fa-cog fa-spin fa-fw" aria-hidden="true"></i>Sending DB Build Request...</span>');
+
+        // check the form's required fields. etc.
+        var f = $("#myForm");
+        if (! f.valid()) {
+            // re-enable the submit button
+            enable_submit_btn(true);
+            return false;
+        }
 
         // validate that the DB name will be unique
         var db_name = $('#db_name').val();
@@ -146,6 +158,7 @@
             classifier: classifier
         };
 
+        // check that the db name/version is unique in git
         $.getJSON(gon.routes.terminology_db_builder_check_tag_conflict_path, params, function (data) {
             if (data.tag_conflict === true) {
                 validation_msg({title: 'Database Name Error', message: "The computed Database Name is not unique in GIT.<br><br>Please change either the database name or database version to ensure uniqueness."});
@@ -154,28 +167,37 @@
                     if (data.nexus_conflict === true) {
                         validation_msg({title: 'Database Artifact Error', message: data.message})
                     } else {
-                        var f = $("#myForm");
-                        if (f.valid()) {
-                            f.submit();
-                        } else {
-                            // reset the submit button
-                            $btnSubmit.attr('onclick', 'submitPackage();').text('Create Database');
-                        }
+                        f.submit();
                     }
                 });
             }
         });
     }
 
-    function validation_msg(data) {
+    function enable_submit_btn(bool) {
         var $btnSubmit = $("#btn_submit");
+
+        if (bool) {
+            $btnSubmit.attr('disabled', false).removeClass('processing').text('Create Database');
+            return true;
+        } else {
+            // the return only applies to disabling the button and is checked in submit_package()
+            // to guard against double submits
+            var ret = ! $btnSubmit.hasClass('processing');
+            $btnSubmit.attr('disabled', true);
+            $btnSubmit.addClass('processing');
+            $btnSubmit.html('<span><i class="fa fa-cog fa-spin fa-fw" aria-hidden="true"></i>Sending DB Build Request...</span>');
+            return ret;
+        }
+    }
+
+    function validation_msg(data) {
         bootbox.alert({
             size: 'medium',
             title: data.title,
             message: data.message,
             callback: function () {
-                // reset the submit button
-                $btnSubmit.attr('onclick', 'submitPackage();').text('Create Database');
+                enable_submit_btn(true);
             }
         }).find('.modal-content').css({
             'margin-top': "200px"
