defect 469184  - changed the span to a button in order to fix 508 issue

--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -28,7 +28,7 @@
         <% deployment[:rows].each do |row| %>
             <tr>
               <td <%= raw(row[:state].eql?('running') ? " data-href='#{row[:link]}'" : '') %>>
-                <span class="<%= row[:state].eql?('running') ? 'btn btn-primary' : 'not-running' %>" tabindex="0"><%= row[:war_name] %></span>
+                <button class="<%= row[:state].eql?('running') ? 'btn btn-primary' : 'not-running' %>" tabindex="0"><%= row[:war_name] %></button>
               </td>
               <td title="<%=row[UuidProp::Keys::DESCRIPTION].to_s%>">
                 <% unless row[:war_uuid].to_s.empty? %>
