--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -30,7 +30,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form">Update User Roles</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form" autofocus>Update User Roles</button>
         <h5 style="padding-top: 5px">User E-Mail/SSOI Login:&nbsp;<strong><span id="edit_user_info_span"></span></strong></h5>
       </div>
       <div class="modal-body scrollable_div">
