log in prod will default to info now.

--- a/config/props/log.properties.erb
+++ b/config/props/log.properties.erb
@@ -35,7 +35,7 @@ append_stdout = false
        env_hash[:age] = 'daily'
        env_hash[:keep] = 7
      else #production
-       env_hash[:level] = 'WARN'
+       env_hash[:level] = 'INFO'
        env_hash[:age] = 'weekly'
        env_hash[:keep] = 12
    end
