refactored internal errors to route to utilities controller to fix css issue

--- a/app/views/utilities/not_configured.html.erb
+++ b/app/views/utilities/not_configured.html.erb
@@ -1,10 +1,9 @@
-<link rel="stylesheet" media="all" href="error_dialog.css"/>
 <style>
     ol.configure li {
         text-align: left;
     }
 </style>
-<div class="dialog">
+<div class="error_dialog">
     <div>
         <h1>PRISME must be configured!</h1>
         <p>A PRISME administrator must configure the following:</p>
