--- a/app/views/utilities/git_not_available.html.erb
+++ b/app/views/utilities/git_not_available.html.erb
@@ -1,5 +1,4 @@
-<link rel="stylesheet" media="all" href="error_dialog.css"/>
-<div class="dialog">
+<div class="error_dialog">
     <div>
         <h1>Git Server is Unavailable</h1>
         <p>Please have an administrator check the logs.</p>
