--- a/app/views/utilities/nexus_not_available.html.erb
+++ b/app/views/utilities/nexus_not_available.html.erb
@@ -1,5 +1,4 @@
-<link rel="stylesheet" media="all" href="error_dialog.css"/>
-<div class="dialog">
+<div class="error_dialog">
     <div>
         <h1>Nexus Artifactory Server is unavailable</h1>
         <p>Please have an administrator configure the Nexus server</p>
