--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,13 +5,13 @@
   <div class="prisme-navbar-header" role="navigation">
     <a href="<%= root_path %>" onclick="polling.checkPolling(polling.pollEnum.WELCOME_CONTROLLER);" title="Home">
       <div class="prisme-logo-prisme" aria-label="PRISME Home" title="PRISME Home">
-        <span class="glyphicon glyphicon-home" style="padding-right: 10px;"></span><%=PRISME_NAME%>
+        <span class="glyphicon glyphicon-home" style="padding-right: 10px;"></span><%= PRISME_NAME %>
       </div>
     </a>
   </div>
   <div class="prisme-navbar-navigation" role="navigation">
 
-  <% if policy(:navigation).can_deploy? %>
+    <% if policy(:navigation).can_deploy? %>
         <div class="dropdown" role="presentation">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Deployment Tools">Deployment Tools<span class="caret"></span></a>
 
@@ -28,47 +28,47 @@
             </li>
           </ul>
         </div>
-  <% end %>
+    <% end %>
 
-  <% if policy(:navigation).any_administrator? %>
-      <div>
-        <a href="<%= app_deployer_path %>" class="prisme-link-button" onclick="polling.checkPolling(polling.pollEnum.DEPLOYER);" title="Deploy Applications">Application
-          Deployer</a>
-      </div>
-
-
-      <div class="dropdown" role="presentation">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Terminology">Terminology
-          <span class="caret"></span></a>
-
-        <ul class="dropdown-menu" aria-hidden="true" aria-label="Terminology Submenu">
-          <li role="menuitem">
-            <a href="<%= terminology_source_packages_path %>" onclick="polling.checkPolling(polling.pollEnum.TERM_SOURCE);" title="Source Package Upload">
-              Source Package Upload</a></li>
-          <li role="menuitem">
-            <a href="<%= terminology_converter_path %>" onclick="polling.checkPolling(polling.pollEnum.CONVERTER);" title="Convert Terminology">
-              Convert Terminology</a></li>
-          <li role="menuitem">
-            <a href="<%= terminology_db_builder_path %>" onclick="polling.checkPolling(polling.pollEnum.DB_BUILDER);" title="Database Builder">
-              Database Builder</a></li>
-        </ul>
-      </div>
+    <% if policy(:navigation).any_administrator? %>
+        <div>
+          <a href="<%= app_deployer_path %>" class="prisme-link-button" onclick="polling.checkPolling(polling.pollEnum.DEPLOYER);" title="Deploy Applications">Application
+            Deployer</a>
+        </div>
 
 
-      <div class="dropdown" role="presentation">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Administration">Administration
-          <span class="caret"></span></a>
+        <div class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Terminology">Terminology
+            <span class="caret"></span></a>
 
-        <ul class="dropdown-menu" aria-hidden="true" aria-label="Administration Submenu">
-          <li role="menuitem">
-            <a href="<%= list_users_path %>" onclick="polling.checkPolling(polling.pollEnum.ADMIN_USER_EDIT);" title="Edit User Permissions">
-              Edit User Permissions</a></li>
-          <li role="menuitem">
-            <a href="<%= services_path %>" onclick="polling.checkPolling(polling.pollEnum.SERVICES);" title="Service Provisioning">
-              Service Provisioning</a></li>
-        </ul>
-      </div>
-  <% end %>
+          <ul class="dropdown-menu" aria-hidden="true" aria-label="Terminology Submenu">
+            <li role="menuitem">
+              <a href="<%= terminology_source_packages_path %>" onclick="polling.checkPolling(polling.pollEnum.TERM_SOURCE);" title="Source Package Upload">
+                Source Package Upload</a></li>
+            <li role="menuitem">
+              <a href="<%= terminology_converter_path %>" onclick="polling.checkPolling(polling.pollEnum.CONVERTER);" title="Convert Terminology">
+                Convert Terminology</a></li>
+            <li role="menuitem">
+              <a href="<%= terminology_db_builder_path %>" onclick="polling.checkPolling(polling.pollEnum.DB_BUILDER);" title="Database Builder">
+                Database Builder</a></li>
+          </ul>
+        </div>
+
+
+        <div class="dropdown" role="presentation">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Administration">Administration
+            <span class="caret"></span></a>
+
+          <ul class="dropdown-menu" aria-hidden="true" aria-label="Administration Submenu">
+            <li role="menuitem">
+              <a href="<%= list_users_path %>" onclick="polling.checkPolling(polling.pollEnum.ADMIN_USER_EDIT);" title="Edit User Permissions">
+                Edit User Permissions</a></li>
+            <li role="menuitem">
+              <a href="<%= services_path %>" onclick="polling.checkPolling(polling.pollEnum.SERVICES);" title="Service Provisioning">
+                Service Provisioning</a></li>
+          </ul>
+        </div>
+    <% end %>
 
 
   </div>
@@ -84,11 +84,12 @@
 
     <div>
       <% if prisme_user.nil? %>
-          <a href="<%= new_user_session_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGIN);">Log in</a>
+          <% if  policy(:navigation).allow_local_login? %>
+              <a href="<%= new_user_session_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGIN);">Log in</a>
+          <% end %>
       <% else %>
           <% if prisme_user.is_a?(SsoiUser) %>
-              <a href="<%= roles_sso_logout_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGOUT);">SSO Log
-                out</a>
+              <a href="<%= roles_sso_logout_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGOUT);">SSO Log out</a>
           <% else %>
               <a href="<%= destroy_user_session_path %>" class="prisme-link-button" id="logout"
                  onclick="polling.checkPolling(polling.pollEnum.LOGOUT)" title="Logout">
