--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,12 +17,12 @@
 
           <ul class="dropdown-menu" aria-hidden="true" aria-label="Checksum">
             <li role="menuitem">
-              <a href="<%= hl7_messaging_path %>?nav=checksum" onclick="polling.checkPolling(polling.pollEnum.CHECKSUM);" title="Terminology Checksum">
+              <a href="<%= checksum_path %>" onclick="polling.checkPolling(polling.pollEnum.CHECKSUM);" title="Terminology Checksum">
                 Checksum
               </a>
             </li>
             <li role="menuitem">
-              <a href="<%= hl7_messaging_path %>?nav=discovery" onclick="polling.checkPolling(polling.pollEnum.DISCOVERY);" title="Terminology Discovery">
+              <a href="<%= discovery_path %>" onclick="polling.checkPolling(polling.pollEnum.DISCOVERY);" title="Terminology Discovery">
                 Discovery
               </a>
             </li>
