--- a/app/views/hl7_messaging/_checksum_results_table.html.erb
+++ b/app/views/hl7_messaging/_checksum_results_table.html.erb
@@ -8,20 +8,35 @@
             </div>
           </div>
           <div class="result_table">
-            <table class="prisme-table table-hover checksum_table" id="<%= "checksum_#{row.id}" %>">
-              <thead>
-              <tr>
-                <th scope="col" width="20%">Site</th>
-                <th scope="col" width="15%">Subset</th>
-                <th scope="col" width="35%" colspan="2">Current Checksum</th>
-                <th scope="col" width="25%">Previous Checksum</th>
-                <th scope="col" width="5%">Discovery</th>
-              </tr>
-              </thead>
-              <tbody>
-              <%= render partial: 'checksum_results_tbody', locals: {checksum_details: row.checksum_details} %>
-              </tbody>
-            </table>
+            <% if history %>
+                <table class="prisme-table table-hover checksum_table">
+                  <thead>
+                  <tr>
+                    <th scope="col" width="20%">Site</th>
+                    <th scope="col" width="15%">Subset</th>
+                    <th scope="col" width="65%" colspan="2">Last Checksum</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <%= render partial: 'checksum_history_tbody', locals: {checksum_details: row.checksum_details} %>
+                  </tbody>
+                </table>
+            <% else %>
+              <table class="prisme-table table-hover checksum_table" id="<%= "checksum_#{row.id}" %>">
+                <thead>
+                <tr>
+                  <th scope="col" width="20%">Site</th>
+                  <th scope="col" width="15%">Subset</th>
+                  <th scope="col" width="35%" colspan="2">Current Checksum</th>
+                  <th scope="col" width="25%">Previous Checksum</th>
+                  <th scope="col" width="5%">Discovery</th>
+                </tr>
+                </thead>
+                <tbody>
+                <%= render partial: 'checksum_results_tbody', locals: {checksum_details: row.checksum_details} %>
+                </tbody>
+              </table>
+            <% end %>
           </div>
         </div>
         <br>
