added checksum history button and functionality

--- a/app/assets/javascripts/hl7_messaging.js.erb
+++ b/app/assets/javascripts/hl7_messaging.js.erb
@@ -6,6 +6,9 @@ function toggleResultTable(elem) {
     });
 }
 
+function init_discovery_polling() {
+
+}
 function init_checksum_table_polling() { // todo rename this - refactor this to use checksum_discovery_table_poll function
     $('.checksum_table').each(function (index, value) {
         var table_id = $(this).attr('id');
