--- a/app/views/hl7_messaging/_discovery_results.html.erb
+++ b/app/views/hl7_messaging/_discovery_results.html.erb
@@ -1,5 +1,5 @@
 <div id="discovery_results_div">
-  <%= render 'layouts/page_title_bar', locals: {title: 'Discovery Summary/Results',
+  <%= render 'layouts/page_title_bar', locals: {title: 'Discovery Summary/Results - remove me',
                                                 actions: ['<button type="button" class="btn btn-info btn-sm btn-back_to_selection">Back</button>',
                                                          ]} %>
   <div id="discovery_results"></div>
