--- a/app/assets/javascripts/hl7_messaging.js.erb
+++ b/app/assets/javascripts/hl7_messaging.js.erb
@@ -7,8 +7,17 @@ function toggleResultTable(elem) {
 }
 
 function init_discovery_polling() {
+    $('.discovery_table').each(function (index, value) {
+        var table_id = $(this).attr('id');
+        var domain = $(this).data('domain');
+        var jqt = $(this);
 
+        setTimeout(function () {
+            checksum_discovery_table_poll(table_id, gon.routes.discovery_request_poll_path, jqt);
+        }, 50);
+    });
 }
+
 function init_checksum_table_polling() { // todo rename this - refactor this to use checksum_discovery_table_poll function
     $('.checksum_table').each(function (index, value) {
         var table_id = $(this).attr('id');
@@ -18,7 +27,9 @@ function init_checksum_table_polling() { // todo rename this - refactor this to 
     });
 }
 
-function checksum_discovery_table_poll(table_id, poll_path) {
+function checksum_discovery_table_poll(table_id, poll_path, jqt) {
+    var domain = jqt.data('domain');
+
     var poll_table_info = table_id.split('_');
     var id = poll_table_info[1];
 
@@ -27,7 +38,7 @@ function checksum_discovery_table_poll(table_id, poll_path) {
         return false;
     }
 
-    $.get(poll_path, {request_id: id}, function (data) {
+    $.get(poll_path, {request_id: id, domain: domain}, function (data) {
         var req_tbl = $('#' + table_id);
         req_tbl.find('tbody').html(data);
 
@@ -36,7 +47,7 @@ function checksum_discovery_table_poll(table_id, poll_path) {
         //check if we continue polling
         if (!req_tbl.data('done')) {
             setTimeout(function () {
-                checksum_discovery_table_poll(table_id, poll_path);
+                checksum_discovery_table_poll(table_id, poll_path, jqt.data('domain'));
             }, 5000);
         }
         // awaiting_poll_results = false;
